build/log/idf_py_stderr_output_44473
/home/pi/wifiRelay_2/main/wifiRelay.c: In function 'obtain_time':
/home/pi/wifiRelay_2/main/wifiRelay.c:438:5: warning: 'sntp_setoperatingmode' is deprecated: use esp_sntp_setoperatingmode() instead [-Wdeprecated-declarations]
  438 |     sntp_setoperatingmode();
      |     ^~~~~~~~~~~~~~~~~~~~~
In file included from /home/pi/wifiRelay_2/main/wifiRelay.c:16:
/home/pi/esp32/esp-idf/components/lwip/include/apps/esp_sntp.h:249:6: note: declared here
  249 | void sntp_setoperatingmode(u8_t operating_mode)
      |      ^~~~~~~~~~~~~~~~~~~~~
/home/pi/wifiRelay_2/main/wifiRelay.c:438:5: error: too few arguments to function 'sntp_setoperatingmode'
  438 |     sntp_setoperatingmode();
      |     ^~~~~~~~~~~~~~~~~~~~~
/home/pi/esp32/esp-idf/components/lwip/include/apps/esp_sntp.h:249:6: note: declared here
  249 | void sntp_setoperatingmode(u8_t operating_mode)
      |      ^~~~~~~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:82: esp-idf/main/CMakeFiles/__idf_main.dir/wifiRelay.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6157: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:149: all] Error 2
